--- a/app/src/main/res/layout/list2.xml
+++ b/app/src/main/res/layout/list2.xml
@@ -4,45 +4,62 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     <ImageView
         android:id="@+id/image2"
+        android:layout_marginTop="@dimen/_10sdp"
         android:layout_width="@dimen/_100sdp"
         android:layout_height="@dimen/_100sdp"/>
 
 
     <TextView
+        android:layout_marginTop="@dimen/_10sdp"
+        android:layout_toRightOf="@id/image2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/id2"/>
 
 
     <TextView
+        android:layout_below="@id/id2"
         android:layout_width="match_parent"
+        android:layout_toRightOf="@id/image2"
         android:id="@+id/name2"
         android:layout_height="wrap_content"/>
 
 
     <TextView
         android:id="@+id/status2"
+        android:layout_below="@id/name2"
+        android:layout_toRightOf="@id/image2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
 
     <TextView
         android:id="@+id/species2"
+        android:layout_below="@id/status2"
+        android:layout_toRightOf="@id/image2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
     <TextView
         android:id="@+id/type2"
+        android:layout_below="@id/species2"
         android:layout_width="match_parent"
+        android:layout_toRightOf="@id/image2"
         android:layout_height="wrap_content"/>
 
     <TextView
         android:id="@+id/gender2"
+        android:layout_below="@id/type2"
         android:layout_width="match_parent"
+        android:layout_toRightOf="@id/image2"
         android:layout_height="wrap_content"/>
 
 
-
+    </RelativeLayout>
 </LinearLayout>
