--- a/app/src/main/res/layout/fragment_ap3.xml
+++ b/app/src/main/res/layout/fragment_ap3.xml
@@ -5,10 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".ap3">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <GridView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
-
+        android:id="@+id/gridView"
+        android:numColumns="1"/>
 </FrameLayout>
