--- a/app/src/main/res/layout/grid.xml
+++ b/app/src/main/res/layout/grid.xml
@@ -1,19 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/_10sdp"
     android:paddingTop="@dimen/_10sdp"
     android:paddingLeft="@dimen/_10sdp"
     android:paddingRight="@dimen/_10sdp">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
         <ImageView
-            android:id="@+id/image2"
+            android:id="@+id/image3"
             android:layout_marginTop="@dimen/_10sdp"
             android:layout_width="@dimen/_100sdp"
             android:layout_height="@dimen/_100sdp"/>
@@ -21,52 +18,50 @@
 
         <TextView
             android:layout_marginTop="@dimen/_10sdp"
-            android:layout_toRightOf="@id/image2"
-            android:layout_width="match_parent"
+            android:layout_toRightOf="@id/image3"
+            android:layout_width="@dimen/_200sdp"
             android:layout_height="wrap_content"
-            android:id="@+id/id2"/>
+            android:id="@+id/id3"/>
 
 
         <TextView
-            android:layout_below="@id/id2"
-            android:layout_width="match_parent"
-            android:layout_toRightOf="@id/image2"
-            android:id="@+id/name2"
+            android:layout_below="@id/id3"
+            android:layout_width="@dimen/_200sdp"
+            android:id="@+id/name3"
             android:layout_height="wrap_content"/>
 
 
         <TextView
-            android:id="@+id/status2"
-            android:layout_below="@id/name2"
-            android:layout_toRightOf="@id/image2"
-            android:layout_width="match_parent"
+            android:id="@+id/status3"
+            android:layout_below="@id/name3"
+            android:layout_toRightOf="@id/image3"
+            android:layout_width="@dimen/_200sdp"
             android:layout_height="wrap_content"/>
 
 
         <TextView
-            android:id="@+id/species2"
-            android:layout_below="@id/status2"
-            android:layout_toRightOf="@id/image2"
-            android:layout_width="match_parent"
+            android:id="@+id/species3"
+            android:layout_below="@id/status3"
+            android:layout_toRightOf="@id/image3"
+            android:layout_width="@dimen/_200sdp"
             android:layout_height="wrap_content"/>
 
         <TextView
-            android:id="@+id/type2"
-            android:layout_below="@id/species2"
-            android:layout_width="match_parent"
-            android:layout_toRightOf="@id/image2"
+            android:id="@+id/type3"
+            android:layout_below="@id/species3"
+            android:layout_width="@dimen/_200sdp"
+            android:layout_toRightOf="@id/image3"
             android:layout_height="wrap_content"/>
 
         <TextView
-            android:id="@+id/gender2"
-            android:layout_below="@id/type2"
-            android:layout_width="match_parent"
-            android:layout_toRightOf="@id/image2"
+            android:id="@+id/gender3"
+            android:layout_below="@id/type3"
+            android:layout_width="@dimen/_200sdp"
+            android:layout_toRightOf="@id/image3"
             android:layout_height="wrap_content"/>
 
 
-    </RelativeLayout>
 
 
 
-</LinearLayout>
+</GridLayout>
